samples/_failures_safe/1761366168_18fb48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_240256cb.c: In function ‘main’:
./samples/SAFE/__tmp_240256cb.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
